[gd_scene load_steps=15 format=3 uid="uid://dgboobdkj8lma"]

[ext_resource type="Texture2D" uid="uid://o0t3ws5lhnos" path="res://Assets/call_cipher.png" id="1_l5f36"]
[ext_resource type="Script" path="res://Scripts/cipher_hint.gd" id="1_utmpg"]
[ext_resource type="FontFile" uid="uid://dqqb4aa66ub7s" path="res://Assets/m5x7.ttf" id="2_cx3o2"]
[ext_resource type="Shader" path="res://Shaders/outline_shader.gdshader" id="2_u6i0f"]
[ext_resource type="Texture2D" uid="uid://b2say0gvm47ih" path="res://Assets/cipher_tile.png" id="3_egbbk"]
[ext_resource type="Texture2D" uid="uid://c6ijgye55ndcg" path="res://Assets/cipher.png" id="6_hacyr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f60ja"]
size = Vector2(16.6667, 17.3333)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4mcsb"]
shader = ExtResource("2_u6i0f")
shader_parameter/outline_color = Color(1, 0.972549, 0.929412, 1)
shader_parameter/is_active = false
shader_parameter/is_marked = null

[sub_resource type="AtlasTexture" id="AtlasTexture_ckyoy"]
atlas = ExtResource("6_hacyr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm36q"]
atlas = ExtResource("6_hacyr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnl6l"]
atlas = ExtResource("6_hacyr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s13f"]
atlas = ExtResource("6_hacyr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lm8r"]
atlas = ExtResource("6_hacyr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_t0vus"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckyoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm36q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnl6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckyoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm36q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnl6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckyoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm36q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnl6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckyoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm36q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnl6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s13f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lm8r")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="CipherHint" type="CanvasLayer"]
script = ExtResource("1_utmpg")

[node name="HintUnused" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 15.0
offset_right = 44.0
offset_bottom = 55.0

[node name="Area2D" type="Area2D" parent="HintUnused"]
position = Vector2(38, 77)
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HintUnused/Area2D"]
position = Vector2(0.666667, 0.666666)
shape = SubResource("RectangleShape2D_f60ja")

[node name="Sprite2D" type="Sprite2D" parent="HintUnused"]
material = SubResource("ShaderMaterial_4mcsb")
position = Vector2(38, 77)
scale = Vector2(3, 3)
texture = ExtResource("1_l5f36")

[node name="HoverLabel" type="RichTextLabel" parent="HintUnused"]
layout_mode = 0
offset_left = 72.0
offset_top = 65.0
offset_right = 294.0
offset_bottom = 96.0
theme_override_colors/default_color = Color(1, 0.972549, 0.929412, 1)
theme_override_fonts/normal_font = ExtResource("2_cx3o2")
theme_override_font_sizes/mono_font_size = 64
theme_override_font_sizes/normal_font_size = 32
text = "Call Cipher for Intel"

[node name="HintActive" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = 75.0
offset_right = 43.0
offset_bottom = 115.0

[node name="NinePatchRect" type="NinePatchRect" parent="HintActive"]
layout_mode = 0
offset_left = 107.0
offset_top = -15.0
offset_right = 562.0
offset_bottom = 99.0
texture = ExtResource("3_egbbk")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="HintText" type="RichTextLabel" parent="HintActive"]
layout_mode = 0
offset_left = 115.0
offset_top = -9.0
offset_right = 556.0
offset_bottom = 89.0
theme_override_colors/default_color = Color(0.152941, 0.113725, 0.172549, 1)
theme_override_fonts/normal_font = ExtResource("2_cx3o2")
theme_override_font_sizes/normal_font_size = 32
text = "Hint here...."

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="HintActive"]
position = Vector2(51.5, 41.5)
scale = Vector2(3.46875, 3.53125)
sprite_frames = SubResource("SpriteFrames_t0vus")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.480261

[connection signal="area_entered" from="HintUnused/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="HintUnused/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="HintUnused/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="HintUnused/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="HintUnused/Area2D" to="." method="_on_area_2d_mouse_exited"]
